// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question dark theme 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        [
          {
            "alignItems": "center",
            "borderColor": "yellow",
            "borderWidth": 0,
            "flex": 1,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View>
        <View
          style={
            {
              "borderColor": "green",
              "borderWidth": 0,
              "flex": 1,
              "justifyContent": "space-between",
              "padding": 10,
              "paddingBottom": 30,
              "width": 320,
            }
          }
        >
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(230, 225, 229, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 28,
                  },
                  {
                    "borderColor": "blue",
                    "borderWidth": 0,
                    "justifyContent": "center",
                    "textAlign": "center",
                  },
                ],
              ]
            }
          >
            History
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "borderColor": "blue",
                "borderWidth": 0,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "borderColor": "indigo",
                  "borderWidth": 0,
                  "justifyContent": "center",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#000",
                    "borderRadius": 5,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.15,
                    "shadowRadius": 3,
                  }
                }
                testID="surface-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#000",
                      "borderColor": "#FFF",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "flex": undefined,
                      "justifyContent": "center",
                      "minHeight": 200,
                      "padding": 30,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 1,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 1,
                    }
                  }
                  testID="surface"
                >
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(230, 225, 229, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "400",
                            "letterSpacing": 0.25,
                            "lineHeight": 20,
                          },
                          {
                            "fontSize": 18,
                            "lineHeight": 21.599999999999998,
                            "textAlign": "center",
                          },
                        ],
                      ]
                    }
                  >
                    Japan was part of the Allied Powers during World War I.
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "fontSize": 48,
                        }
                      }
                    >
                      ?
                    </Text>
                  </View>
                </View>
              </View>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(230, 225, 229, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      {
                        "borderColor": "violet",
                        "borderWidth": 0,
                      },
                    ],
                  ]
                }
              >
                1
                 of 10
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "borderColor": "indigo",
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  false,
                  {
                    "borderColor": "violet",
                    "borderRadius": 5,
                    "borderWidth": 0,
                    "flexBasis": "45%",
                  },
                ]
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#DD4837",
                    "borderRadius": 5,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.15,
                    "shadowRadius": 3,
                  }
                }
                testID="surface-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#DD4837",
                      "borderColor": "brown",
                      "borderRadius": 5,
                      "borderWidth": 0,
                      "flex": undefined,
                      "justifyContent": "center",
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 1,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 1,
                    }
                  }
                  testID="surface"
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 48,
                      }
                    }
                  >
                    ✗
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(230, 225, 229, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "400",
                            "letterSpacing": 0.25,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "borderColor": "grey",
                              "borderWidth": 0,
                              "fontSize": 18,
                            },
                            {
                              "backgroundColor": "#DD4837",
                              "color": "#FFF",
                            },
                          ],
                        ],
                      ]
                    }
                  >
                    False
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  false,
                  {
                    "borderColor": "violet",
                    "borderRadius": 5,
                    "borderWidth": 0,
                    "flexBasis": "45%",
                  },
                ]
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#59AF23",
                    "borderRadius": 5,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.15,
                    "shadowRadius": 3,
                  }
                }
                testID="surface-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#59AF23",
                      "borderColor": "brown",
                      "borderRadius": 5,
                      "borderWidth": 0,
                      "flex": undefined,
                      "justifyContent": "center",
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 1,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 1,
                    }
                  }
                  testID="surface"
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 48,
                      }
                    }
                  >
                    ✓
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "borderColor": "grey",
                          "borderWidth": 0,
                          "fontSize": 18,
                        },
                        {
                          "backgroundColor": "#59AF23",
                          "color": "#FFF",
                        },
                      ]
                    }
                  >
                    True
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Question light theme 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        [
          {
            "alignItems": "center",
            "borderColor": "yellow",
            "borderWidth": 0,
            "flex": 1,
          },
          {
            "backgroundColor": "#FFF",
          },
        ]
      }
    >
      <View>
        <View
          style={
            {
              "borderColor": "green",
              "borderWidth": 0,
              "flex": 1,
              "justifyContent": "space-between",
              "padding": 10,
              "paddingBottom": 30,
              "width": 320,
            }
          }
        >
          <Text
            style={
              [
                {
                  "textAlign": "left",
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "writingDirection": "ltr",
                },
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 28,
                  },
                  {
                    "borderColor": "blue",
                    "borderWidth": 0,
                    "justifyContent": "center",
                    "textAlign": "center",
                  },
                ],
              ]
            }
          >
            History
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "borderColor": "blue",
                "borderWidth": 0,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "borderColor": "indigo",
                  "borderWidth": 0,
                  "justifyContent": "center",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#FFF",
                    "borderRadius": 5,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.15,
                    "shadowRadius": 3,
                  }
                }
                testID="surface-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#FFF",
                      "borderColor": "#000",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "flex": undefined,
                      "justifyContent": "center",
                      "minHeight": 200,
                      "padding": 30,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 1,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 1,
                    }
                  }
                  testID="surface"
                >
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "400",
                            "letterSpacing": 0.25,
                            "lineHeight": 20,
                          },
                          {
                            "fontSize": 18,
                            "lineHeight": 21.599999999999998,
                            "textAlign": "center",
                          },
                        ],
                      ]
                    }
                  >
                    Japan was part of the Allied Powers during World War I.
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "fontSize": 48,
                        }
                      }
                    >
                      ?
                    </Text>
                  </View>
                </View>
              </View>
              <Text
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0.25,
                        "lineHeight": 20,
                      },
                      {
                        "borderColor": "violet",
                        "borderWidth": 0,
                      },
                    ],
                  ]
                }
              >
                1
                 of 10
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "borderColor": "indigo",
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  false,
                  {
                    "borderColor": "violet",
                    "borderRadius": 5,
                    "borderWidth": 0,
                    "flexBasis": "45%",
                  },
                ]
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#DD4837",
                    "borderRadius": 5,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.15,
                    "shadowRadius": 3,
                  }
                }
                testID="surface-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#DD4837",
                      "borderColor": "brown",
                      "borderRadius": 5,
                      "borderWidth": 0,
                      "flex": undefined,
                      "justifyContent": "center",
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 1,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 1,
                    }
                  }
                  testID="surface"
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 48,
                      }
                    }
                  >
                    ✗
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "400",
                            "letterSpacing": 0.25,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "borderColor": "grey",
                              "borderWidth": 0,
                              "fontSize": 18,
                            },
                            {
                              "backgroundColor": "#DD4837",
                              "color": "#FFF",
                            },
                          ],
                        ],
                      ]
                    }
                  >
                    False
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  false,
                  {
                    "borderColor": "violet",
                    "borderRadius": 5,
                    "borderWidth": 0,
                    "flexBasis": "45%",
                  },
                ]
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#59AF23",
                    "borderRadius": 5,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.15,
                    "shadowRadius": 3,
                  }
                }
                testID="surface-outer-layer"
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#59AF23",
                      "borderColor": "brown",
                      "borderRadius": 5,
                      "borderWidth": 0,
                      "flex": undefined,
                      "justifyContent": "center",
                      "padding": 10,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 1,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 1,
                    }
                  }
                  testID="surface"
                >
                  <Text
                    style={
                      {
                        "color": "#FFF",
                        "fontSize": 48,
                      }
                    }
                  >
                    ✓
                  </Text>
                  <Text
                    style={
                      [
                        {
                          "borderColor": "grey",
                          "borderWidth": 0,
                          "fontSize": 18,
                        },
                        {
                          "backgroundColor": "#59AF23",
                          "color": "#FFF",
                        },
                      ]
                    }
                  >
                    True
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaProvider>
`;
